Chuyen noi dung nhat ky sang README.md va cap nhat tien do tuan 9, 10